# bestforward

./: .env  .env.example  DASHBOARD_FIX_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPORT_FIX_COMPLETE.md  README.md  README_DEPLOYMENT.md  SECURITY_FIX_REPORT.md  SKIP_TASK_CREATION_FIX.md  SOURCE_CHAT_COLUMN_FIX.md  SSL_MODE_FIX_REPORT.md  SYNTAX_ERROR_FIX_REPORT.md  TASK_TYPE_COLUMN_FIX.md  alembic.ini  asyncpg.py  bot_buttons_test_report.md  bot_controller.py  bot_improvements_completed.md  comprehensive_bot_analysis.md  comprehensive_dashboard_analysis_report.md  config.py  database.py  database_tables_fix_report.md  deploy.sh  docker-compose.yml  filter_bots_fix_report.md  final_fix_status.md  fixes_report.md  forwarding_engine.py  keyboards.py  localization.py  loguru.py  main.py  missing_handlers_report.md  mock_dependencies.py  models.py  northflank_connectivity_report.md  performance_test_report.md  pyproject.toml  (+8 more)
.northflank/: northflank.json
alembic/: env.py
handlers/: __init__.py  admin.py  session.py  sources.py  targets.py  tasks.py
modules/: __init__.py  channel_monitor.py  performance_monitor.py  settings_manager.py  statistics.py  task_manager.py
utils/: __init__.py  callback_router.py  database_cache.py  legacy_functions.py  logging_compat.py  memory_manager.py
